--- a/assets/fragments/sidebar.html
+++ b/assets/fragments/sidebar.html
@@ -1,11 +1,12 @@
 <!-- assets/fragments/sidebar.html -->
 <aside class="sidebar">
   <div class="sidebar-divider"></div>
-  <a href="#" data-module="dashboard.html"><i class="fas fa-home"></i><span>Dashboard</span></a>
-  <a href="#" data-module="fechamento-caixa.html"><i class="fas fa-cash-register"></i><span>Fechamento de Caixa</span></a>
-  <a href="#" data-module="clube-id.html"><i class="fas fa-tags"></i><span>Clube ID</span></a>
-  <a href="#" data-module="clientes-indesejaveis.html"><i class="fas fa-user-slash"></i><span>Clientes Indesejáveis</span></a>
-  <a href="#" data-module="anotacoes-importantes.html"><i class="fas fa-sticky-note"></i><span>Anotações Importantes</span></a>
-  <a href="#" data-module="relatorios.html"><i class="fas fa-file-alt"></i><span>Relatórios</span></a>
-  <a href="#" data-module="configuracoes.html"><i class="fas fa-cogs"></i><span>Configurações</span></a>
-  </aside>
+  <a href="../../pages/app/dashboard.html"><i class="fas fa-home"></i><span>Dashboard</span></a>
+  <a href="../../pages/app/fechamento-caixa.html"><i class="fas fa-cash-register"></i><span>Fechamento de Caixa</span></a>
+  <a href="../../pages/app/clube-id.html"><i class="fas fa-tags"></i><span>Clube ID</span></a>
+  <a href="../../pages/app/clientes-indesejaveis.html"><i class="fas fa-user-slash"></i><span>Clientes Indesejáveis</span></a>
+  <a href="../../pages/app/anotacoes-importantes.html"><i class="fas fa-sticky-note"></i><span>Anotações Importantes</span></a>
+  <a href="../../pages/app/relatorios.html"><i class="fas fa-file-alt"></i><span>Relatórios</span></a>
+  <a href="../../pages/app/configuracoes.html"><i class="fas fa-cogs"></i><span>Configurações</span></a>
+</aside>
+
